k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubernaizing
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: MONGO_URI
              value: mongodb://username:password@mongo:27017/todos?authSource=admin
          image: ghcr.io/alecog/todolist-back:v0.0.1
          imagePullPolicy: IfNotPresent
          name: api
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
