k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubernaizing
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - image: docker.io/library/kubernaizing-web:v1
          imagePullPolicy: IfNotPresent
          name: web
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
