k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kubernaizing
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: api
