k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kubernaizing
  name: mongo
spec:
  selector:
    io.kompose.service: mongo
  ports:
    - port: 27017
      targetPort: 27017
