k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kubernaizing
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 8080
  selector:
    io.kompose.service: web
