k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: kubernaizing
  labels:
    app.kubernetes.io/name: web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubernaizing.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              number: 3000
